--- a/problemSets/PS/PS4/PS4_corrections.tex
+++ b/problemSets/PS/PS4/PS4_corrections.tex
@@ -98,22 +98,22 @@ ASSIGNMENT 04
 
 \section*{Exercise 1}
 
-Amanda, Deborah and Rebecca work in a company as operators. They have to redirect the phone calls from the central to the different services of the company. Sometimes they make mistakes with
-probability 0.02, 0.03 and 0.05. Amanda takes care of 50\% of the connections, Deborah 30\% and Rebecca 20\%. We say that an operator provides a good service if she does not commit any error.
+Albert, David and Rebecca work in a company as operators. They have to redirect the phone calls from the central to the different services of the company. Sometimes they make mistakes with
+probability 0.02, 0.03 and 0.05. Albert takes care of 50\% of the connections, David 30\% and Rebecca 20\%. We say that an operator provides a good service if they do not commit any error.
 
 \begin{enumerate}
-  \item Among the bad services provided by the company, what is the proportion provided by Amanda?
+  \item Among the bad services provided by the company, what is the proportion provided by Albert?
   \item What is the total proportion of good services ?
   \item
-  Deborah goes often to parties during the night and then sometimes she gets suddenly sick the next day. She is absent with a probability of 10\%.
-  During her absences, Amanda takes care of 65\% of the connections and Rebecca of 35\%, but because of the stress, the probability of making a mistake
-  increases to 0.04 for Amanda and to 0.06 for Rebecca. If a client is redirected to a wrong phone line, what is the probability that Deborah went dancing during the preceding night and then she was sick ?
+  David goes often to parties during the night and sometimes gets suddenly sick the next day. He is absent with a probability of 10\%.
+  During his absences, Albert takes care of 65\% of the connections and Rebecca of 35\%, but because of the stress, the probability of making a mistake
+  increases to 0.04 for Albert and to 0.06 for Rebecca. If a client is redirected to a wrong phone line, what is the probability that David went dancing during the preceding night and was sick ?
 \end{enumerate}
 
 \noindent Solutions:\\
 Let be the following events: \\
-A=\{Amanda takes care of the phone call\} ; \\
-D=\{Deborah takes care of the phone call\}; \\
+A=\{Albert takes care of the phone call\} ; \\
+D=\{David takes care of the phone call\}; \\
 R=\{Rebecca takes care of the phone call\}; \\
 E=\{An error has been committed\}; \\
 
@@ -128,9 +128,9 @@ We know that: $P(A)=0.5; P(D)=0.3; P(R)=0.2; P(E \vert A)=0.02; P(E \vert D)=0.0
 $P(\bar{E})=1-P(E)=1-0.029=0.971$.
 
 
-  \item  $S$=\{Deborah is sick\}; \\
-$A_S$=\{ Amanda takes care of the phone call while Deborah is sick\}; \\
-$R_S$=\{Rebecca takes care of the phone call while Deborah is sick\}; \\
+  \item  $S$=\{David is sick\}; \\
+$A_S$=\{ Albert takes care of the phone call while David is sick\}; \\
+$R_S$=\{Rebecca takes care of the phone call while David is sick\}; \\
 
 We know: $P(A_S)=0.65; P(R_S)=0.35; P(S)=0.1; P(E \vert A_S)=0.04; P(E \vert R_S)=0.06$.
 
@@ -260,15 +260,6 @@ Xenia has 6 books: 3 novels, 2 mathematics and 1 electronics.
   \item $$P(Math=2)= \frac{{2 \choose 2} +{2 \choose 2} {3 \choose 1}}{{6 \choose 3}} =\frac{1}{5}$$
   So: $P(Math \leq 1)=1-\frac{1}{5}=\frac{4}{5}$
 \end{enumerate}
-
-
-
-
-
-
-
-
-
 
 \end{document}
 
