--- a/book/05-continuous_rv.Rmd
+++ b/book/05-continuous_rv.Rmd
@@ -50,7 +50,7 @@ We notice that there are too many different values for the returns. This yields
 a low value and "uniform" relative frequency which does not help us gain any insight on the probability distribution of the values. Moreover, we could be almost sure that a future return would not have any of the values already obtained. 
 
 However, we notice that there's some _concentration_, i.e. there are more returns in the 
-neighborhood of zero, as there are in the extreme corners of the possible values. To quantify this concentration, we can create a _histogram_ by splitting the space of possible values into a given number of intervals, or ``bins'', and counting the number of observations within a bin. 
+neighborhood of zero, as there are in the extreme corners of the possible values. To quantify this concentration, we can create a _histogram_ by splitting the space of possible values into a given number of intervals, or "bins", and counting the number of observations within a bin. 
 
 If we consider 30 bins, we obtain the following plot: 
 
@@ -120,7 +120,7 @@ And we can affine our analysis by increasing the number of bins.
 ```
 
 In the last one, we see that there is clearly a peak around 12h. If we would like 
-to allocate ressources (e.g. hire more service workers to adapt to the demand),
+to allocate resources (e.g. hire more service workers to adapt to the demand),
 we'd like to call the workers to provide service around those hours. 
 
 ```{r ,echo = FALSE, fig.cap='', fig.align='center', out.width = "80%"}
@@ -128,8 +128,8 @@ we'd like to call the workers to provide service around those hours.
 ```
 
 These examples are illustrations of a class of random variables which are 
-different from what we have seen so far. Specifically, the examples emphasise that,
-unlike discrete random variables, the considered variables are 
+different from what we have seen so far. Specifically, the examples emphasise 
+that, unlike discrete random variables, the considered variables are 
 **continuous random variables** i.e. they can take any value in an interval.
 
 This means we cannot simply _list_ all possible values of the random variable, 
@@ -138,7 +138,8 @@ that might occur.
 
 However, what we can do is to construct a probability distribution by assigning 
 a positive **probability to each and every possible interval** of values that 
-can occur. This is done by defining the **Cumulative Distribution Function (CDF)**, which is sometimes called  **Probability Distribution Function**. 
+can occur. This is done by defining the **Cumulative Distribution Function (CDF)**,
+which is sometimes called  **Probability Distribution Function**. 
 
 So, graphically, we have that the **Discrete Random Variables** have a distribution that allocates the **probability** to the **values**, represented by *bars*, whereas **Continuous Random Variables** have a distribution that allocates probability to **intervals**, represented by the **area below the density curve** enclosed by the interval. 
 
@@ -225,7 +226,7 @@ Another way of seeing this relationship is with the following plot, where the va
 knitr::include_graphics("img/05_continuous_rv/Diego_F-1.png")
 ```
 
-From a formal mathematical standpoint, the relationship between PDF and CDF is given by the **_fundamental theorem of integral calculus_**. In the illustration $X$ is a random variable taking values in the interval $(a,b]$, and the pdf $f_{X}\left(x\right)$ is non-zero only in $(a,b)$. More generally we have, for a variable taking values on the whole real line ($\mathbb{R}$): 
+From a formal mathematical standpoint, the relationship between PDF and CDF is given by the **_fundamental theorem of integral calculus_**. In the illustration, $X$ is a random variable taking values in the interval $(a,b]$, and the pdf $f_{X}\left(x\right)$ is non-zero only in $(a,b)$. More generally we have, for a variable taking values on the whole real line ($\mathbb{R}$): 
 
 -  the **_fundamental theorem of integral calculus_** yields
 
@@ -236,12 +237,11 @@ the area under the CDF between $-\infty$ and $x$
 -  or in terms of derivative
 $$\color{blue}{f_{X}\left( x\right)} = \frac{d\color{red}{F_{X}(x)}}{dx}$$ 
 
-Most of the PDF's that we are going to consider are bell-shaped. So, typically, we will have 
-
+Most of the PDF's that we are going to consider are bell-shaped. So, typically, we will have a density that looks like a bell:
 ```{r ,echo = FALSE, fig.cap='', fig.align='center', out.width = "80%"}
 knitr::include_graphics("img/05_continuous_rv/R_bell_pdf-1.png")
 ```
-
+and a CDF that has the shape of an S.
 ```{r ,echo = FALSE, fig.cap='', fig.align='center', out.width = "80%"}
 knitr::include_graphics("img/05_continuous_rv/R_bell_CDF-1.png")
 ```
@@ -274,7 +274,7 @@ Var\left( X\right) =\sum_{i}\left( x_{i}-E\left[ X\right] \right) ^{2}P
 \end{equation*}
 
 ```{definition, name="Variance of a Continuous Random Variable"}
-Similarly, for **continuous** random variables, we use integration
+Similarly, for continuous random variables, we use integration to obtain the variance. 
 
 \begin{equation*}
 Var\left( X\right) =\int_{a}^{b}\left( x-E\left[ X\right] \right)^{2}\,f_{X}\left( x\right) dx
@@ -311,14 +311,18 @@ As with discrete random variables, the following properties hold when $X$ is a c
 - $Var\left( cX\right) =c^{2}Var\left( X\right)$
 - $Var\left( c+X\right) =Var\left( X\right)$
 
-Let us consider, for instance, the following proofs for first two properties
-
+Let us consider, for instance, the following proofs for first two properties. 
+To compute $E\left[ cX\right]$ we take advantage of the _linearity_ of the
+integral with respect to multiplication by a constant. 
 \begin{eqnarray*}
 E\left[ cX\right] &=&\int \left( cx\right) f_{X}\left( x\right) dx \\
 &=&c\int xf_{X}\left( x\right) dx \\
 &=&cE\left[ X\right].
 \end{eqnarray*}
 
+In the same way,  to evaluate $E\left[ c+X\right]$, we take advantage of the 
+linearity of integration and of the fact that $f(x)$ is a density and integrates to 1 over the 
+whole domain of integration.
 \begin{eqnarray*}
 E\left[ c+X\right] &=&\int \left( c+x\right) f_{X}\left( x\right) dx \\
 &=&\int cf_{X}\left( x\right) dx+\int xf_{X}\left( x\right) dx \\
@@ -326,21 +330,19 @@ E\left[ c+X\right] &=&\int \left( c+x\right) f_{X}\left( x\right) dx \\
 &=&c+E\left[ X\right].
 \end{eqnarray*}
 
-
 ### Mode and Median
 
 There are two other important distributional summaries that also characterise a sort of center for the distribution: the Mode and the Median.
 
 The **Mode** of a continuous random variable having density $f_{X}(x)$ is the value of $x$ for which the PDF $f_X(x)$ attains its maximum, i.e.$$\text{Mode}(X) = \text{argmax}_{x}\{f_X(x)\}.$$ Very roughly speaking, it is the point with the highest _concentration_ of probability.
 
-
 On the other hand, the **Median** of a continuous random variable having CDF $F_{X}(x)$ is the value $m$ such that $F(m) = 1/2$
   $$\text{Median}(X) = \text{arg}_{m}\left\{P(X\leq m) = F_X(m) = \frac{1}{2}\right\}.$$
-Very roughly speaking, the median is the value that splits the sample space in two intervals with equal cumulative probability. 
+Again, very roughly speaking, the median is the value that splits the sample space in two intervals with equal cumulative probability. 
 
-Let's illustrate these two location values in the pdf. We have purposefully chosen an assymetric (right)_skewed_ distribution to display the differences between these two values. 
+Let's illustrate these two location values in the pdf. We have purposefully chosen an asymmetric (right)_skewed_ distribution to display the differences between these two values. 
 
-```{r ,echo = FALSE, fig.cap='', fig.align='center', out.width = "80%"}
+```{r ,echo = FALSE, fig.cap='Mode and Median of an asymmetric distribution', fig.align='center', out.width = "80%"}
 library(patchwork)
 k <- 7
 med <- k*(1-2/(9*k))^3
@@ -378,7 +380,7 @@ mode_illustration / median_illustration
 
 ## Some Important Continuous Distributions 
 
-There is a wide variety of Probability Distributions. In this section, we will explore the properties of the following: 
+There is a wide variety of Probability Distributions. In this section, we will explore the properties of some of them: 
 
 -  Continuous Uniform
 -  Gaussian a.k.a. "Normal"
@@ -392,7 +394,7 @@ There is a wide variety of Probability Distributions. In this section, we will e
 
 ```{definition, label = "unif", name = "Continuous Uniform Distribution"}
 We say $X$ has a continuous **uniform** distribution over the
-interval $[a,b]$, denoted as $X\sim Unif(a,b)$, when the CDF and pdf are given by
+interval $[a,b]$, denoted as $X\sim \mathcal{U}(a,b)$, when the CDF and pdf are given by
 $$
 {F_X\left( x\right)}=\left\{
                            \begin{array}{ll}
@@ -460,17 +462,41 @@ respectively.
 
 As a graphical illustration, let us consider the case when $a=0$ and $b=1$. So, we have that the density is 1 on the interval $(0,1)$ and 0 everywhere else:
 
-```{r ,echo = FALSE, fig.cap='', fig.align='center', out.width = "80%"}
-  knitr::include_graphics("img/05_continuous_rv/uniform_pdf3-1.png")
+```{r ,echo = FALSE, fig.cap='Density of a Continuous Uniform Random Variable', fig.align='center', out.width = "80%"}
+  sim_data <- seq(-1, 2, by=0.0005) %>%
+  as_tibble() %>%
+  rename(x = value) %>%
+  mutate(f_x = dunif(x,min=0, max=1)) 
+
+sim_data %>%
+  mutate(f_x = case_when(
+    x==0~0,
+    x==1~0,
+    TRUE ~ f_x
+  )
+  ) %>% 
+  ggplot(aes(x = x, y = f_x)) +
+  geom_point(color = "blue", lwd = 1)+
+  theme_minimal() +
+   labs(title = "Density of U(0,1)",
+       x = "x",
+       y = expression(f[X](x))) + ylim(c(0,1.5))+
+  geom_point(data=as_tibble(data.frame(x = c(0,1), f_x= c(0,0))), aes(x=x, y = f_x),
+             color = "blue", lwd = 3) + 
+  geom_point(data=as_tibble(data.frame(x = c(0,1), f_x= c(1,1))), aes(x=x, y = f_x),
+             color = "blue", lwd = 3, shape = 1)
 ```
+
 
 #### Expectation
 
-The expected value of $X$ is
+The expected value of $X$ can be computed via integration: 
 \begin{eqnarray*}
 E\left[ X\right] &=&\int_{a}^{b}\frac{x}{\left( b-a\right) }dx \\
-&=&\left. \frac{x^{2}}{2\left( b-a\right) }\right\vert _{a}^{b} \\
-&=&\frac{b^{2}}{2\left( b-a\right) }-\frac{a^{2}}{2\left( b-a\right) } \\
+&=&\frac{1}{\left( b-a\right)} \int_{a}^{b} x dx \\
+&=& \frac{1}{\left( b-a\right)} \left[\frac{x^{2}}{2}\right] _{a}^{b} \\
+&=&\frac{1}{\left(b-a\right)}\left[\frac{b^{2}}{2}-\frac{a^{2}}{2}\right]\\
+&=&\frac{1}{2\left(b-a\right)}\left[(b-a)(b+a)\right]\\
 &=&\frac{a+b}{2}
 \end{eqnarray*}
 
@@ -482,8 +508,9 @@ When $a=0$ and $b=1$, then $E\left[ X\right] =\frac{1}{2}$.
 
 By definition, the variance of $X$ is given by: 
 \begin{eqnarray*}
-Var\left( X\right) &=&\int_{a}^{b}\left( x-\left( \frac{a+b}{2}\right)
-\right) ^{2}\frac{1}{b-a}dx \\
+Var\left( X\right) 
+&=&\int_{a}^{b}\left[] x-\left( \frac{a+b}{2}\right)
+\right]^{2}\frac{1}{b-a}dx \\
 &=&E\left[ X^{2}\right] -E\left[ X\right] ^{2}
 \end{eqnarray*}
 
@@ -510,12 +537,35 @@ For instance, when $a=0$ and $b=1$, then $Var\left( X\right) =\frac{1}{12}$.
 ``` 
 
 ```{example} 
-Let $X \sim U(0,10)$. Then its pdf is $f_X(x) = 1/10=0.1$ for $x\in[0,10]$ and zero otherwise. The pdf plot is:
+Let $X \sim \mathcal{U}(0,10)$. Then its pdf is $f_X(x) = 1/10=0.1$ for $x\in(0,10)$ and zero otherwise. The PDF plot is:
 ```
 
-```{r ,echo = FALSE, fig.cap='', fig.align='center', out.width = "80%"}
-  knitr::include_graphics("img/05_continuous_rv/Unif_Diego-1.png")
+```{r ,echo = FALSE, fig.cap='Density of a Continuous Uniform Random Variable', fig.align='center', out.width = "80%"}
+  sim_data <- seq(-1, 11, by=0.0005) %>%
+  as_tibble() %>%
+  rename(x = value) %>%
+  mutate(f_x = dunif(x,min=0, max=10)) 
+
+sim_data %>%
+  mutate(f_x = case_when(
+    x==0~0,
+    x==10~0,
+    TRUE ~ f_x
+  )
+  ) %>% 
+  ggplot(aes(x = x, y = f_x)) +
+  geom_point(color = "blue", lwd = 1)+
+  theme_minimal() +
+   labs(title = "Density of U(0,10)",
+       x = "x",
+       y = expression(f[X](x))) + ylim(c(0,0.2))+
+  geom_point(data=as_tibble(data.frame(x = c(0,10), f_x= c(0,0))), aes(x=x, y = f_x),
+             color = "blue", lwd = 3) + 
+  geom_point(data=as_tibble(data.frame(x = c(0,10), f_x= c(0.1,0.1))), aes(x=x, y = f_x),
+             color = "blue", lwd = 3, shape = 1)+ 
+  scale_x_continuous(breaks = seq(-1,11, by = 1))
 ```
+
 We can compute the probabilities of different intervals:
 \begin{align}
 P(0\leq x \leq 1) &= \int_{0}^{1} 0.1x dx &= &0.1 x \left.\right\vert_{x=0}^{x=1}  \\
@@ -525,10 +575,35 @@ P(2\leq x \leq 4) &=  P(2\leq x \leq 4)   &= &0.2  \\
 P(x \geq 2)       &=  P(2 < x \leq 10)    &= &0.1(10-2) = 0.8
 \end{align}
 
-Let's represent graphically the $P(X\geq 2)$. Indeed, we see that it is represented by the pink rectangle. If we compute the area, it is apparent that its value is $0.8$, as we have obtained with the formula
+Let's represent graphically the $P(X\geq 2)$. Indeed, we see that it is represented by the pink rectangle. If we compute the area, it is apparent that its value is $0.8$, as we have obtained with the formula.
 
-```{r ,echo = FALSE, fig.cap='', fig.align='center', out.width = "80%"}
-  knitr::include_graphics("img/05_continuous_rv/CDF_Diego-1.png")
+```{r ,echo = FALSE, fig.cap='Cumulated Probability between 2 and 10', fig.align='center', out.width = "80%"}
+sim_data <- seq(-1, 11, by=0.0005) %>%
+  as_tibble() %>%
+  rename(x = value) %>%
+  mutate(f_x = dunif(x,min=0, max=10),
+         f_x = case_when(
+           x==0~0,
+           x==10~0,
+           TRUE ~ f_x
+           )
+         )
+
+sim_data %>%
+  ggplot(aes(x = x, y = f_x)) +
+  geom_area(data = sim_data %>% filter(x>=2) , aes(x = x, y = f_x), fill="pink", alpha =0.5) + 
+  geom_point(color = "blue", lwd = 1)+
+  theme_minimal() +
+   labs(title = "Density of U(0,1)",
+       x = "x",
+       y = expression(f[X](x))) + 
+  ylim(c(0,0.2))+
+  geom_point(data=as_tibble(data.frame(x = c(0,10), f_x= c(0,0))), aes(x=x, y = f_x),
+             color = "blue", lwd = 3) + 
+  geom_point(data=as_tibble(data.frame(x = c(0,10), f_x= c(0.1,0.1))), aes(x=x, y = f_x),
+             color = "blue", lwd = 3, shape = 1) + 
+  scale_x_continuous(breaks = seq(-1,11, by = 1))
+  
 ```
 
 ### Normal (Gaussian) distribution
@@ -538,7 +613,7 @@ century when scientists observed an astonishing degree of
 regularity in the behavior of measurement errors. They found that
 the patterns (distributions) that they observed, and which they
 attributed to chance, could be closely approximated by continuous
-curves which they christened the ``normal curve of errors".
+curves which they christened the "normal curve of errors".
  
 The mathematical properties of these curves were first studied by
 
@@ -546,71 +621,92 @@ The mathematical properties of these curves were first studied by
 -  Pierre Laplace (1749-1827), and then
 -  Karl Gauss (1777-1855), who also lent his name to the distribution.
 
-
 ```{definition, label = "gaussian", name = "The Gaussian Distribution"}
 A variable $X$ is said to have a **Gaussian** or **Normal**
 distribution, with mean $\mu$ and variance $\sigma ^{2}$, if its pdf is given by
 \begin{equation*}
-\phi_{(\mu,\sigma)}(x) =\frac{1}{\sqrt{2\pi \sigma ^{2}}}\exp^{ \left\{ -\frac{1%
+\phi_{(\mu,\sigma)}(x) =\frac{1}{\sqrt{2\pi \sigma ^{2}}}\exp{ \left\{ -\frac{1%
 }{2\sigma ^{2}}\left( x-\mu \right) ^{2}\right\}}~~-\infty<x<\infty\,.
 \end{equation*}
 The short-hand notation is $X\sim \mathcal{N}\left( \mu ,\sigma ^{2}\right)$. 
 ```
 
-```{remark}
-A couple of important properties: 
+There are couple of important **properties** worth mentioning:  
 
-- A Normal distribution is completely defined by its mean $\mu$ and its variance $\sigma ^{2}$. Infinitely many different normal distributions are obtained by varying the _parameters_ $\mu$ and $\sigma ^{2}$.
-- A Normal random variable $X$ can take any value $x\in\mathbb{R}$.
-```
+- A Normal random variable **$X$ can take any value $x\in\mathbb{R}$**.
+- A Normal distribution is **completely defined by its mean $\mu$ and its variance $\sigma ^{2}$**. This means that infinitely many different normal distributions are obtained by varying the _parameters_ $\mu$ and $\sigma ^{2}$. To illustrate this property, we plot a series of densities that result from replacing different values of $\mu$ and $\sigma^2$ in the following figure. 
 
-
-The pdf of the normal distribution is
-
-- "Bell-shaped": looks a little bit like a bell,
-- Symmetric : it is not skewed either to the right or to the left,
-- Unimodal : it has only one mode,
-- The mean, median and mode are all equal,
-
-Here we see a bunch of normal distributions, that we obtain by varying the parameters $\mu$ and $\sigma$:
-
-```{r ,echo = FALSE, fig.cap='', fig.align='center', out.width = "80%"}
+```{r ,echo = FALSE, fig.cap='Densities for $\\color{blue}{X_{1}\\sim\\mathcal{N}(0,1)}$, $\\color{red}{X_{2}\\sim\\mathcal{N}(0,1.5^2)}$, $\\color{forestgreen}{X_{3}\\sim\\mathcal{N}(1,2.5^2)}$', fig.align='center', out.width = "80%"}
   knitr::include_graphics("img/05_continuous_rv/normals4-1.png")
 ```
 
-#### The standard Normal distribution
+- As we can assess in the previous plot, the PDF of the Normal Distribution is "Bell-shaped", meaning that looks a little bit like a bell. Moreover, it is:
+  - **Symmetric**, i.e. it is not skewed either to the right or to the left. This also implies that the values of the density are the same for $x$ and $-x$, i.e  $\phi_{(\mu,\sigma)}(x) = \phi_{(\mu,\sigma)}(-x)$
+  - **Unimodal**, meaning that it has only one mode and 
+  - The **Mean**, **Median** and **Mode** are all **equal**, owing to the **symmetry** of the distribution.
+
+```{r ,echo = FALSE, fig.cap='', fig.align='center', out.width = "80%"}
+sim_data <- seq(-5, 5, by=0.005) %>%
+  as_tibble() %>%
+  rename(x = value) %>%
+  mutate(f_x = dnorm(x,mean = 0, sd = 1.5))
+
+sim_data %>%
+  ggplot(aes(x = x, y = f_x)) +
+  geom_line(color = "red", lwd = 1)+
+  theme_minimal() +
+   labs(title = "Density of N(0,2.25)",
+       x = "x",
+       y = expression(f[X](x))) +
+  geom_segment(
+    data = sim_data %>% filter(x %in% c(1.5, -1.5)),
+    mapping = aes(x = x,  y=0 , xend = x, yend = f_x), 
+    linetype = 2
+  ) + 
+  geom_segment(
+    data = sim_data %>% filter(x %in% c(1.5, -1.5)),
+    mapping = aes(x = x[1],y = f_x , xend = x[2], yend = f_x), 
+    linetype = 2
+  )
+```
+
+
+#### The Standard Normal distribution
 
 First let us establish that $\phi_{(\mu,\sigma)}(x)$ can serve as a
-genuine density function. Integrating with respect to $x$ using
-\textit{integration by substitution} we obtain
+**density function**. To show that, we need to demonstrate that it integrates to 1 in all the domain $\mathbb{R}$
+
+Integrating with respect to $x$ using _integration by substitution_ we obtain
 \begin{eqnarray*}
 \int_{-\infty}^{\infty}\phi_{(\mu,\sigma)}(x)dx&=&
-\int_{-\infty}^{\infty}\frac{1}{\sqrt{2\pi\sigma^2}}\exp^{\{-\frac{(x-\mu)^2}{2\sigma^2}\}}dx
+\int_{-\infty}^{\infty}\frac{1}{\sqrt{2\pi\sigma^2}}\exp{\left\{-\frac{(x-\mu)^2}{2\sigma^2}\right\}}dx
 \\
- &=&\int_{-\infty}^{\infty}\frac{1}{\sqrt{2\pi}}\exp^{\{-\frac{z^2}{2}\}}dz
+ &=&\int_{-\infty}^{\infty}\frac{1}{\sqrt{2\pi}}\exp{\left\{-\frac{z^2}{2}\right\}}dz \quad \text{where: } z=\frac{x-\mu}{\sigma} \Leftrightarrow dz = \frac{dx}{\sigma}.
 \end{eqnarray*}
-where $z=(x-\mu)/\sigma$. But the second integral on the right
-hand side equals
+But the second integral on the right hand side equals:
 $$
-\frac{2}{\sqrt{2\pi}}\underbrace{\int_0^{\infty}\exp^{\{-z^2/2\}}dz}_{={\sqrt{2\pi}} \big/ {2}}
+\int_{-\infty}^{\infty}\exp{\left\{-\frac{z^2}{2}\right\}}dz =  2\underbrace{\int_0^{\infty}\exp{\left\{-\frac{z^2}{2}\right\}}dz}_{={\sqrt{2\pi}} \big/ {2}} =
+\sqrt{2\pi}
 $$
-which is **a known standard integral**.
+which is **a known result**, known as the **Gaussian Integral** that cancels out with $1/\sqrt{2\pi}$ yielding the integration to 1. Hence, the function  $\phi_{(\mu,\sigma)}(x)$ does 
+indeed define the PDF of a  random variable with a mean $\mu$ and a variance of $\sigma^2$
 
-The function $\phi_{(\mu,\sigma)}(x)$ does indeed define the pdf of a random variable with a mean of $\mu$ and a variance of $\sigma^2$. This was established by transforming from $X$ to $Z$ via the substitution $Z=(X-\mu)/\sigma$. Such a variable is said to be standardised. 
+```{remark}
+Notice that to prove that $\phi_{(\mu,\sigma)}(x)$, we had to **transform** $X$ to $Z$ via the substitution $Z=(X-\mu)/\sigma$. The variable $Z$ is said to be **standardised**.
 
-Note also that the resulting integrand:
+Notice also that the resulting integrand:
 $$
-\frac{1}{\sqrt{2\pi}}\exp^{\{-\frac{z^2}{2}\}}=\phi_{(0,1)}(z)\,,
+\frac{1}{\sqrt{2\pi}}\exp{\left\{-\frac{z^2}{2}\right\}}=\phi_{(0,1)}(z),
 $$
-is the pdf of a random variable $Z\sim \mathcal{N}(0,1)$. If $Z\sim \mathcal{N}(0,1)$ then $Z$ is called a **standard normal** random variable because: $\textsf{E}[Z]=0$ and $\textsf{Var}(Z)=1$
-
-Because of the special role that the standard normal distribution has in
-calculations involving the normal distribution its pdf is given the special notation 
+is the PDF of a random variable $Z\sim \mathcal{N}(0,1)$, which is called a **standard normal random variable** because: $E[Z]=0$ and $Var(Z)=1$. Because of the special role that the standard normal distribution has in calculations involving the normal distribution its PDF is given the special 
+notation:
 $$\phi(z)=\phi_{(0,1)}(z).$$
+```
+
 
 The basic feature that underlies calculations involving the Normal distribution:
 
--  $$X\sim \mathcal{N}\left( \mu ,\sigma ^{2}\right)\Leftrightarrow Z=\frac{\left( X-\mu \right) }{\sigma }\sim \mathcal{N}\left( 0,1\right)$$
+$$X\sim \mathcal{N}\left( \mu ,\sigma ^{2}\right)\Leftrightarrow Z=\frac{\left( X-\mu \right) }{\sigma }\sim \mathcal{N}\left( 0,1\right)$$
 
 We can always transform from $X$ to $Z$  by  "shifting" and "re-scaling":
 \begin{equation*}
@@ -621,7 +717,7 @@ and return back to $X$ by a "re-scaling" and "shifting":
 X=\sigma Z+\mu  \ (\text{for the random variable}) \quad\mbox{and}\quad x=\sigma z+\mu\, \ (\text{for its values}) .
 \end{equation*}
 
-Thus statements about a Normal random variable can always be translated into equivalent statements about a standard Normal random variable, and vice versa.
+Thus, statements about a Normal random variable can always be translated into equivalent statements about a standard Normal random variable, and viceversa.
 
 #### The Normal CDF
 
@@ -636,11 +732,11 @@ Start from $X \sim \mathcal{N}(5,3)$; then define $Y=X-5$, which is a recentered
 In formulae:
 
 -  For $X\sim \mathcal{N}\left( \mu ,\sigma ^{2}\right)$, the CDF is given by%
-$$\Phi_{(\mu,\sigma)}\left( x\right) =\int_{-\infty }^{x}\frac{1}{\sqrt{2\pi \sigma ^{2}}}\exp^{ \left\{ -\frac{1}{2\sigma ^{2}}\left( t-\mu \right) ^{2}\right\}} dt$$
+$$\Phi_{(\mu,\sigma)}\left( x\right) =\int_{-\infty }^{x}\frac{1}{\sqrt{2\pi \sigma ^{2}}}\exp{ \left\{ -\frac{1}{2\sigma ^{2}}\left( t-\mu \right) ^{2}\right\}} dt$$
 -  To calculate $\Phi_{(\mu,\sigma)}\left( x\right)=P(\{X\leq x\})$ we use integration by substitution, once again, to give
 
 \begin{eqnarray*}
-P(\{ X\leq x\} )&=&\int_{-\infty}^x\frac{1}{\sqrt{2\pi\sigma^2}}\exp^{\left\{-\frac{(t-\mu)^2}{2\sigma^2}\right\}}dt\\
+P(\{ X\leq x\} )&=&\int_{-\infty}^x\frac{1}{\sqrt{2\pi\sigma^2}}\exp{\left\{-\frac{(t-\mu)^2}{2\sigma^2}\right\}}dt\\
  &=&\int_{-\infty}^z\phi(s)ds\\
   &=&P(\{Z\leq z\})
 \end{eqnarray*}
